k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-intima-fooocus-deployment
  namespace: prod-intima-fooocus
  labels:
    app: prod-intima-fooocus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-intima-fooocus
  template:
    metadata:
      labels:
        app: prod-intima-fooocus
    spec:
      containers:
        - name: prod-intima-fooocus
          image: corentin35/intima-fooocus:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 7865
          volumeMounts:
            - name: fooocus-data
              mountPath: /content/data
      volumes:
        - name: fooocus-data
          persistentVolumeClaim:
            claimName: fooocus-pvc
      imagePullSecrets:
        - name: regcred
